<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".MainActivity">
                <EditText
                    android:id="@+id/display"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:ems="10"
                    android:layout_alignParentTop="true"/>
                <Button
                    android:id="@+id/btn_seven"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_7"
                    android:layout_alignParentLeft="true"
                    android:layout_below="@+id/display"/>
                <Button
                    android:id="@+id/btn_eight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_8"
                    android:layout_centerInParent="true"
                    android:layout_below="@+id/display"
                    android:layout_toRightOf="@+id/btn_seven"/>
                <Button
                    android:id="@+id/btn_nine"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_9"
                    android:layout_below="@+id/display"
                    android:layout_toRightOf="@+id/btn_eight"/>
                <Button
                    android:id="@+id/btn_four"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_4"
                    android:layout_below="@+id/btn_seven"
                    android:layout_alignParentLeft="true"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_5"
                    android:id="@+id/btn_five"
                    android:layout_below="@+id/btn_seven"
                    android:layout_toRightOf="@+id/btn_four"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_6"
                    android:id="@+id/btn_six"
                    android:layout_below="@+id/btn_seven"
                    android:layout_toRightOf="@+id/btn_five"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_1"
                    android:id="@+id/btn_one"
                    android:layout_below="@+id/btn_four"
                    android:layout_alignParentLeft="true"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_2"
                    android:id="@+id/btn_two"
                    android:layout_below="@+id/btn_four"
                    android:layout_toRightOf="@+id/btn_one"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_3"
                    android:id="@+id/btn_three"
                    android:layout_below="@+id/btn_four"
                    android:layout_toRightOf="@+id/btn_two"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_duoble"
                    android:id="@+id/btn_duoble"
                    android:layout_below="@+id/btn_one"
                    android:layout_alignParentLeft="true"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_0"
                    android:id="@+id/btn_zero"
                    android:layout_below="@+id/btn_one"
                    android:layout_toRightOf="@+id/btn_duoble"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_c"
                    android:id="@+id/btn_clear"
                    android:layout_below="@+id/btn_one"
                    android:layout_toRightOf="@+id/btn_zero"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_divide"
                    android:id="@+id/btn_divide"
                    android:layout_below="@+id/display"
                    android:layout_toRightOf="@+id/btn_nine"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_increase"
                    android:id="@+id/btn_increase"
                    android:layout_below="@+id/btn_seven"
                    android:layout_toRightOf="@+id/btn_six"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_minus"
                    android:id="@+id/btn_minus"
                    android:layout_below="@+id/btn_four"
                    android:layout_toRightOf="@+id/btn_three"/>
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_plus"
                    android:id="@+id/btn_plus"
                    android:layout_below="@+id/btn_one"
                    android:layout_toRightOf="@+id/btn_clear"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/txt_btn_equalse"
                    android:id="@+id/btn_equalse"
                    android:layout_below="@+id/btn_duoble"/>
</RelativeLayout>





